<resources>
    <string name="app_name">Restaurant System</string>
    <!-- Main page where the user can make a new order for a customer -->
    <string name="create_a_new_order">Create a new order</string>
    <!-- Adding a new food category. Example dessert, mains, starters and so on -->
    <string name="add_new_food_category">Add new category</string>
    <string name="view_order">View order</string>
    <string name="view_final_order">View order</string>
    <string name="order_button_food_page">Order</string>
    <string name="title_activity_test">test</string>
    <string name="add_new_category_text">Add category</string>
    <string name="add_category_button">Add category</string>
    <string name="category_name_user_input">Category name</string>
    <string name="add_food_name">Add food name</string>
    <string name="add_food_name_hint">Food name</string>
    <string name="drinks_hint_category">Drinks</string>
    <string name="category_text_view_add_food">Category</string>
    <string name="add_food_button">Add food</string>
    <string name="cancel_order_in_cart">Cancel order</string>
    <string name="order_button_in_cart">Order</string>
    <string name="edit_mode_off">Edit mode: off</string>
    <string name="edit_mode_on">Edit mode: on</string>
    <string name="add_price_hint">Price</string>
    <string name="add_a_price_food_name">Add a price</string>
    <string name="remove_food_button">Remove food</string>
    <string name="remove_category_button">Remove category</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
