<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.lianreviews.resturantsystem.category.AddCategory">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_food_name"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/food_name_user_input"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:hint="@string/add_food_name_hint"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_price_food_name"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/price_user_input"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="14sp"
        android:hint="@string/add_price_hint"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_text_view_add_food"
        android:textSize="16sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/category_name_add_food"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/drinks_hint_category"
        android:textSize="14sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_food_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/add_food_button"/>

    </RelativeLayout>
</LinearLayout>
